# rules_hugo

./: .bazelrc  .cirrus.yml  .gitignore  MODULE.bazel  README.md  modernisation_report.md
.github/workflows/: build.yaml  publish.yaml
hugo/: extensions.bzl
hugo/internal/: hugo_repository.bzl  hugo_site.bzl  hugo_theme.bzl
site_complex/: BUILD
site_complex/config/_default/: languages.yaml
site_simple/: BUILD.bazel
site_simple/content/: _index.md
