module(
    name = "rules_hugo_rmcguinness",
    version = "0.2.0",
)

# Load the module extension for Hugo dependencies
hugo_deps = use_extension("//hugo:extensions.bzl", "hugo_deps")

# Configure Hugo repository
hugo_deps.hugo_repository(
    name = "hugo",
    extended = True,
    version = "0.162.0",
)

# Configure Hugo themes
hugo_deps.http_archive(
    name = "hugo_theme_book",
    build_file_content = """
filegroup(
    name = "files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"]
)
        """,
    sha256 = "adf41c4282974dc7b42aa28762e34b704a0aad4ec8d648eb425484dbdfbbefc8",
    strip_prefix = "hugo-book-11.0.0",
    url = "https://github.com/alex-shpak/hugo-book/archive/refs/tags/v11.0.0.zip",
)
hugo_deps.http_archive(
    name = "hugo_theme_geekdoc",
    build_file_content = """
filegroup(
    name = "files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"]
)
    """,
    sha256 = "d53aca4bbcad45770b0b1e7bc03253b7b824270536578f2028966f68ba3a98d1",
    url = "https://github.com/thegeeklab/hugo-geekdoc/releases/download/v4.1.1/hugo-geekdoc.tar.gz",
)
use_repo(hugo_deps, "hugo", "hugo_theme_book", "hugo_theme_geekdoc")
